# ganban

./: 2.test-adding-again.md  AGENTS.md  Makefile  README.md  index.md  pyproject.toml
.all/: 001.md  002.md  003.md  004.md  005.md  006.md  008.md  009.md  010.md  011.md  012.md  013.md  014.md  016.md  017.md  018.md  019.md  020.md  021.md  022.md  023.md  024.md  025.md  026.md  027.md  028.md  029.md  030.md  031.md  032.md  034.md  035.md  036.md  037.md  038.md  039.md  040.md  041.md  042.md  043.md  (+61 more)
1.backlog/: 01.editor-selection.md  01.merge-conflicts-new-cards.md  02.card-labels.md  03.arrow-key-movement.md  04.blocked-by.md  04.dependency-graph.md  05.task-list-editor.md  06.comment-editor.md  07.change-all-location.md  07.datetime-parser.md  07.drop-target-region.md  08.dependency-graph.md  08.depends-on.md  08.sync-first-steps.md  09.drop-target-region.md  09.id-parser.md  10.card-archive-focus.md  10.notifications.md  10.ui-fix-gaps-between-widgets.md  10.web-ui.md  11.arrow-key-movement.md  11.board-filter.md  11.details-clicking.md  11.sync-column-updates.md  12.mermaid.md  12.meta-editor-ux.md  12.rename-on-conflict.md  13.cli-allow-short-refs.md  13.git-user-details.md  13.rich-text-markdown.md
2.next/: 01.merge-conflict-testing.md  02.cli.md  02.column-view-mode.md  02.sync-cli.md  03.add-agents-md.md  03.keyboard-menu-nav.md  03.make-drag-drop-be-more-generic.md
2.now/: 01.add-label-selection-to-card-context-menu.md  01.card-labels-on-board.md  01.change-delete-icon.md  01.cli-allow-short-refs.md  01.colour-editor-ux.md  01.reconcile.md  01.selector-ux.md  01.simple-conflict.md  01.syntax-highlighting.md  01.test.md  01.user-completion.md  01.web-right-click.md  02.bottom-border-dragging-card.md  02.emoji-doesn-t-change-live.md  02.focus-on-new-heading.md  02.git-rename-boundary.md  02.label-editor-ux.md  02.mouse-in-menu.md  02.set-theme-to-gruvbox-by-default.md  02.use-project-name-on-board-creation.md  03.card-completion.md  03.delete-column.md  index.md
3.done/: 01.after-edit-focus-loss.md  01.click-in-text-broken.md  01.close-button.md  01.computed-properties.md  01.editor-background-colour.md  01.keep-original-email.md  01.rename-on-conflict.md
3.now/: 01.add-app-footer.md  01.add-card-id-to-card-details-screen.md  01.address-bar-search-editor.md  01.drag-bug.md  01.fix-background-card-colour.md  01.id-on-card-titles.md  01.keyboard-control-in-date-picker.md  01.keyboard-nav-on-board.md  01.mutation-logic.md  01.persist-sync-status.md  01.remove-view.md  01.style-of-links.md  01.sync-ui.md  01.test-adding.md  01.test-card-creation-timestamp.md  01.text-selector.md  01.try-again.md  01.users-editor.md  02.add-board-settings-button.md  02.fix-args.md  02.placeholder-in-compact-view.md  02.tooltip-flicker.md  02.user-editor-emails.md  1.test-adding.md
4.askajhajsd/: index.md
4.done/: 01.backlog-default-to-list-mode.md  01.card-creation-timestamp.md  01.clicking-in-markdown-editors.md  01.column-dragging-screen-space.md  01.move-to-tcss-files.md  01.reduce-tooltip-padding.md
5.squiiiiiddooooooo/: index.md  (+1 more)
(+156 files in other folders)
