[project]
name = "ganban"
description = "Git-based kanban board TUI"
version = "0.1.0"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "textual",
    "gitpython",
    "pyyaml"
]

[project.scripts]
ganban = "ganban.__main__:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "pydoc-markdown"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true
