[project]
name = "ganban"
description = "Git-based kanban board TUI"
version = "0.4.0"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "textual>=7.5",
    "gitpython>=3.1",
    "pyyaml>=6.0"
]

[project.scripts]
ganban = "ganban.__main__:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "pydoc-markdown"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
