[project]
name = "ganban"
description = "Git-based kanban board TUI"
version = "0.5.3"
authors = [
    { name = "Gareth Davidson", email = "gaz@bitplane.net" }
]
readme = "README.md"
license = "WTFPL"
requires-python = ">=3.11"
keywords = ["kanban", "git", "tui", "textual", "board", "project-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "textual>=7.5",
    "textual-serve>=1.1.3",
    "gitpython>=3.1",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://bitplane.net/dev/python/ganban"
Repository = "https://github.com/bitplane/ganban"
Issues = "https://github.com/bitplane/ganban/tree/ganban"

[project.scripts]
ganban = "ganban.__main__:main"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "coverage",
    "pytest-cov",
    "build",
    "twine",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "pydoc-markdown"
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
